--- a/WeatherCord.csproj
+++ b/WeatherCord.csproj
@@ -8,4 +8,10 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="DotNetEnv" Version="2.4.0"/>
+        <PackageReference Include="DSharpPlus" Version="4.3.0"/>
+        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0"/>
+    </ItemGroup>
+
 </Project>
