--- a/Interactivity/Interactivity.csproj
+++ b/Interactivity/Interactivity.csproj
@@ -11,6 +11,8 @@
         <PackageReference Include="DotNetEnv" Version="2.5.0"/>
         <PackageReference Include="DSharpPlus" Version="4.3.0"/>
         <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0"/>
+        <PackageReference Include="MongoDB.Analyzer" Version="1.1.0"/>
+        <PackageReference Include="MongoDB.Driver" Version="2.19.0"/>
     </ItemGroup>
 
 </Project>
