--- a/AlertService/AlertService.csproj
+++ b/AlertService/AlertService.csproj
@@ -13,6 +13,11 @@
         <PackageReference Include="DSharpPlus.SlashCommands"/>
         <PackageReference Include="MongoDB.Analyzer"/>
         <PackageReference Include="MongoDB.Driver"/>
+        <PackageReference Remove="MongoDB.Driver"/>
+        <PackageReference Remove="DSharpPlus"/>
+        <PackageReference Remove="DSharpPlus.SlashCommands"/>
+        <PackageReference Remove="DotNetEnv"/>
+        <PackageReference Remove="MongoDB.Analyzer"/>
     </ItemGroup>
 
 </Project>
