--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,12 +1,15 @@
 ﻿<Project>
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="DotNetEnv" Version="2.5.0"/>
-        <PackageReference Include="DSharpPlus" Version="4.3.0"/>
-        <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0"/>
-        <PackageReference Include="MongoDB.Analyzer" Version="1.1.0"/>
-        <PackageReference Include="MongoDB.Driver" Version="2.19.0"/>
-    </ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="DotNetEnv" Version="2.5.0" />
+    <PackageReference Include="DSharpPlus" Version="4.3.0" />
+    <PackageReference Include="DSharpPlus.SlashCommands" Version="4.3.0" />
+    <PackageReference Include="MongoDB.Analyzer" Version="1.1.0" />
+    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="DotNetEnv" Version="2.5.0" />
+  </ItemGroup>
 </Project>
